added website embed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     </style>
     <title>Home Launcher</title>
+    <meta content="Home Launcher" property="og:title" />
+    <meta content="Two custom made browser home pages :3" property="og:description" />
+    <meta content="https://home-launcher.vercel.app" property="og:url" />
+    <meta content="https://home-launcher.vercel.app/terminal.png" property="og:image" />
+    <meta content="#6c038a" data-react-helmet="true" name="theme-color" />
   </head>
   <body>
     <div id="root"></div>
