--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-    html, body {
-  background-color: #111;
-}
-
+      html,
+      body {
+        background-color: #111;
+      }
     </style>
     <title>Home Launcher</title>
     <meta content="Home Launcher" property="og:title" />
-    <meta content="Two custom made browser home pages :3" property="og:description" />
+    <meta
+      content="Two custom made browser home pages"
+      property="og:description"
+    />
     <meta content="https://home-launcher.vercel.app" property="og:url" />
-    <meta content="https://home-launcher.vercel.app/terminal.png" property="og:image" />
+    <meta
+      content="https://home-launcher.vercel.app/terminal.png"
+      property="og:image"
+    />
     <meta content="#6c038a" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
